fix: align text styles

--- a/packages/core/src/components/page-header/page-header.scss
+++ b/packages/core/src/components/page-header/page-header.scss
@@ -19,22 +19,12 @@
     flex: 1 1 0%;
   }
 
-  .headerTitle {
-    color: var(--theme-color-std-text);
-    font-weight: 700;
-    font-size: 22px;
-    line-height: 32.01px;
-
-    &.secondary {
-      font-size: 16px;
-      line-height: 20px;
-    }
+  .subtitle {
+    margin-top: 0.5rem;
   }
 
-  .headerSubtitle {
-    color: var(--theme-color-soft-text);
-    font-size: 12px;
-    line-height: 18px;
+  .backButton {
+    margin-right: 0.5rem;
   }
 
   .buttons {
